--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
+# Environment variables
+.env
+.env.local
+
+# Dependencies
 node_modules/
 dist/
-.env
-.env.*
-!.env.example
+
+# Logs
 *.log
-coverage/
-.DS_Store 
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db 
