--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
   "dependencies": {
     "@aws-sdk/client-cloudwatch": "^3.723.0",
     "@aws-sdk/client-kinesis": "^3.0.0",
+    "@aws-sdk/client-ssm": "^3.726.1",
+    "@types/express": "^4.17.21",
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "express": "^4.18.2",
-    "@types/express": "^4.17.21",
-    "express-ws": "^5.0.7"
+    "express-ws": "^5.0.2"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
     "@types/express-ws": "^3.0.4",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.10.5",
+    "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "typescript": "^5.7.2",
-    "ts-node": "^10.9.2",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.14"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
-} 
+}
