--- a/package.json
+++ b/package.json
@@ -1,32 +1,21 @@
 {
   "name": "ngu-blockchain-listener",
   "version": "1.0.0",
+  "description": "Blockchain event listener for NGU",
+  "main": "dist/run.js",
   "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/run.js",
-    "dev": "ts-node src/run.ts",
-    "test": "jest"
+    "start": "node dist/run.js"
   },
   "dependencies": {
-    "@aws-sdk/client-cloudwatch": "^3.723.0",
     "@aws-sdk/client-kinesis": "^3.0.0",
-    "@aws-sdk/client-ssm": "^3.726.1",
-    "@types/express": "^4.17.21",
-    "dotenv": "^16.4.7",
-    "ethers": "^6.13.5",
-    "express": "^4.18.2",
-    "express-ws": "^5.0.2"
+    "ethers": "^6.0.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
-    "@types/express-ws": "^3.0.4",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.10.5",
-    "@types/ws": "^8.5.13",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "jest": "^29.7.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "@types/node": "^18.0.0",
+    "@types/ws": "^8.5.10",
+    "typescript": "^5.0.0"
   }
 }
