--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "start": "node dist/run.js"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch": "^3.0.0",
     "@aws-sdk/client-kinesis": "^3.0.0",
+    "@aws-sdk/client-ssm": "^3.0.0",
+    "dotenv": "^16.0.0",
     "ethers": "^6.0.0",
-    "ws": "^8.16.0"
+    "express": "^4.0.0",
+    "express-ws": "^5.0.0",
+    "ws": "^8.0.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.0",
+    "@types/express-ws": "^3.0.0",
     "@types/node": "^18.0.0",
-    "@types/ws": "^8.5.10",
+    "@types/ws": "^8.0.0",
     "typescript": "^5.0.0"
   }
 }
