--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
     "@aws-sdk/client-cloudwatch": "^3.0.0",
     "@aws-sdk/client-kinesis": "^3.0.0",
     "@aws-sdk/client-ssm": "^3.0.0",
+    "@aws-sdk/credential-provider-node": "^3.0.0",
+    "@aws-sdk/core": "^3.0.0",
+    "@smithy/smithy-client": "^2.0.0",
+    "@smithy/util-defaults-mode-node": "^2.0.0",
+    "@smithy/protocol-http": "^2.0.0",
+    "@smithy/middleware-serde": "^2.0.0",
+    "@smithy/util-waiter": "^2.0.0",
+    "@smithy/property-provider": "^2.0.0",
+    "@smithy/shared-ini-file-loader": "^2.0.0",
     "dotenv": "^16.0.0",
     "ethers": "^6.0.0",
     "express": "^4.0.0",
