--- a/scripts/event-monitor.service
+++ b/scripts/event-monitor.service
@@ -9,9 +9,17 @@ Group=ec2-user
 WorkingDirectory=/home/ec2-user/event-monitor
 Environment=NODE_ENV=staging
 Environment=AWS_REGION=us-east-1
-ExecStart=/usr/bin/node dist/run.js
+Environment=DEBUG=*
+Environment=NODE_OPTIONS="--trace-warnings --experimental-specifier-resolution=node"
+EnvironmentFile=/home/ec2-user/event-monitor/.env
+ExecStart=/usr/bin/node --experimental-specifier-resolution=node dist/run.js
 Restart=always
 RestartSec=10
+StandardOutput=append:/var/log/event-monitor.log
+StandardError=append:/var/log/event-monitor.error.log
+
+# Ensure we have access to enough file descriptors
+LimitNOFILE=65535
 
 [Install]
 WantedBy=multi-user.target 
