--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@smithy/util-waiter": "^2.0.0",
     "@smithy/property-provider": "^2.0.0",
     "@smithy/shared-ini-file-loader": "^2.0.0",
+    "aws-sdk": "^2.1565.0",
     "dotenv": "^16.0.0",
     "ethers": "^6.0.0",
     "express": "^4.0.0",
