--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@aws-sdk/client-ssm": "^3.0.0",
     "@aws-sdk/credential-provider-node": "^3.0.0",
     "@aws-sdk/core": "^3.0.0",
+    "@aws-sdk/client-dynamodb": "^3.0.0",
+    "@aws-sdk/lib-dynamodb": "^3.0.0",
     "@smithy/smithy-client": "^2.0.0",
     "@smithy/util-defaults-mode-node": "^2.0.0",
     "@smithy/protocol-http": "^2.0.0",
